--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <title>Team Shoky Helper - Student Productivity App</title>
   <meta name="description"
     content="Academic productivity tools for college students - track courses, exams, schedules and more!" />
-  <meta name="author" content="Team Shoky" />
+  <meta name="author" content="jooexploit" />
+  <meta name="keywords"
+    content="student productivity, college tools, academic planner, course tracker, exam schedule, GPA calculator" />
+  <link rel="icon" href="https://raw.githubusercontent.com/jooexploit/landingpage-v2/refs/heads/main/public/favicon.ico"
+    type="image/x-icon" />
 
   <meta property="og:title" content="Team Shoky Helper" />
   <meta property="og:description" content="Academic productivity tools for college students" />
@@ -15,7 +19,6 @@
   <meta property="og:image" content="https://i.ibb.co/bRCWmT9d/Team-Shoky-Helper.jpg" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <!-- <meta name="twitter:site" content="@lovable_dev" /> -->
   <meta name="twitter:image" content="https://i.ibb.co/bRCWmT9d/Team-Shoky-Helper.jpg" />
 </head>
 
